[gd_scene load_steps=15 format=3 uid="uid://ch1ttkvnsghnw"]

[ext_resource type="Script" uid="uid://b42wy2r64e4a" path="res://scenes/NarativeScenes/Script/awakening_environment.gd" id="1_ebp8x"]
[ext_resource type="PackedScene" uid="uid://buinssl07707h" path="res://assets/Building/Building 1/House-1.gltf" id="2_le1v4"]
[ext_resource type="PackedScene" uid="uid://dysbko8iwr1sr" path="res://assets/Building/Building 2/House-3A.glb" id="3_876vf"]
[ext_resource type="PackedScene" uid="uid://b3p0rfsrmughh" path="res://assets/Building/Building 3/Under-house (2).gltf" id="4_swwvq"]
[ext_resource type="Script" uid="uid://cogfo7kfktfg4" path="res://scenes/NarativeScenes/Script/player_character.gd" id="5_f4tgv"]
[ext_resource type="Script" uid="uid://dgfq3w021r67s" path="res://scenes/NarativeScenes/Script/awakening_camera_controller.gd" id="6_bjme1"]
[ext_resource type="Script" uid="uid://c86wt7sw6gv5p" path="res://script/NarrativeSceneScripts/camera_controller.gd" id="7_pp1vh"]
[ext_resource type="Script" uid="uid://dc2jevgscgkfi" path="res://script/NarrativeSceneScripts/dialogue_ui.gd" id="8_4igs4"]
[ext_resource type="Script" uid="uid://b16kko6yesh4g" path="res://scenes/NarativeScenes/Script/awakening_audio.gd" id="9_t2ff0"]
[ext_resource type="Script" uid="uid://dcf0677e4iaao" path="res://scenes/NarativeScenes/Script/awakening_narrative.gd" id="10_722yh"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kq5kl"]

[sub_resource type="Sky" id="Sky_4bumr"]
sky_material = SubResource("ProceduralSkyMaterial_kq5kl")

[sub_resource type="Environment" id="Environment_qurli"]
background_mode = 2
sky = SubResource("Sky_4bumr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_icf0h"]
albedo_color = Color(0.403922, 0.403922, 0.403922, 1)

[node name="NarrativeScene3d" type="Node3D"]

[node name="Environment" type="Node3D" parent="."]
script = ExtResource("1_ebp8x")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_qurli")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 5)

[node name="Background" type="MeshInstance3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -10)

[node name="Floor" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.453652, -0.0571614, 0.252969)
material_override = SubResource("StandardMaterial3D_icf0h")
use_collision = true
size = Vector3(1000, 0.5, 1000)

[node name="Buildings" type="Node3D" parent="Environment"]

[node name="Testing_simbahan" type="CSGCombiner3D" parent="Environment/Buildings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0494546, 0, 0.119337)
visible = false
use_collision = true

[node name="Front_wall2" type="CSGBox3D" parent="Environment/Buildings/Testing_simbahan"]
transform = Transform3D(1.00002, -0.00484559, 0.000630333, 0.00484554, 1.00002, 7.9579e-05, -0.000630711, -7.65263e-05, 1.00003, 1.58862, 4.64653, -23.9674)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="Front_wall" type="CSGBox3D" parent="Environment/Buildings/Testing_simbahan"]
transform = Transform3D(1.00001, -0.00242276, 0.00031521, 0.00242275, 1.00001, 3.94071e-05, -0.000315305, -3.86446e-05, 1.00001, 1.69758, 4.7205, 0.988882)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Environment/Buildings/Testing_simbahan/Front_wall"]
transform = Transform3D(0.989359, 1.45519e-10, 9.53332e-09, -4.47655e-09, -0.00580184, -4.77733, 2.03727e-10, 1.00428, -0.0275992, -0.00774574, -5.12693, -0.164842)
operation = 2
radius = 1.3252
height = 1.07959
sides = 50

[node name="Left_wall" type="CSGBox3D" parent="Environment/Buildings/Testing_simbahan"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, -5.59021, 4.55233, -11.469)
size = Vector3(0.25, 10, 25)

[node name="Right_wall" type="CSGBox3D" parent="Environment/Buildings/Testing_simbahan"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, 8.94156, 4.49875, -11.4309)
size = Vector3(0.25, 10, 25)

[node name="House1" parent="Environment/Buildings" instance=ExtResource("2_le1v4")]
transform = Transform3D(0.250278, 0, 29.999, 0, 30, 0, -29.999, 0, 0.250278, -16.6421, 0.130899, -4.87025)

[node name="CollisionBuilding" type="CSGCombiner3D" parent="Environment/Buildings/House1"]
transform = Transform3D(0.000275086, 0, -0.00993562, 0, 0.043521, 0, 0.0329726, 0, 8.28917e-05, -0.174336, -0.0470055, -0.0569959)
visible = false
use_collision = true

[node name="Front_wall2" type="CSGBox3D" parent="Environment/Buildings/House1/CollisionBuilding"]
transform = Transform3D(1.00002, -0.00484559, 0.000630333, 0.00484554, 1.00002, 7.9579e-05, -0.000630711, -7.65263e-05, 1.00003, 1.58862, 4.64653, -23.9674)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="Front_wall" type="CSGBox3D" parent="Environment/Buildings/House1/CollisionBuilding"]
transform = Transform3D(1.00001, -0.00242276, 0.00031521, 0.00242275, 1.00001, 3.94071e-05, -0.000315305, -3.86446e-05, 1.00001, 1.69758, 4.7205, 0.988882)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Environment/Buildings/House1/CollisionBuilding/Front_wall"]
transform = Transform3D(0.989359, 1.45519e-10, 9.53332e-09, -4.47655e-09, -0.00580184, -4.77733, 2.03727e-10, 1.00428, -0.0275992, -0.00774574, -5.12693, -0.164842)
operation = 2
radius = 1.3252
height = 1.07959
sides = 50

[node name="Left_wall" type="CSGBox3D" parent="Environment/Buildings/House1/CollisionBuilding"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, -5.59021, 4.55233, -11.469)
size = Vector3(0.25, 10, 25)

[node name="Right_wall" type="CSGBox3D" parent="Environment/Buildings/House1/CollisionBuilding"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, 9.31371, 4.49875, -11.4309)
size = Vector3(0.25, 10, 25)

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Buildings/House1/CollisionBuilding"]
transform = Transform3D(4.80105, 0, 1.66533e-15, 0, 7.38084, 0, -2.84217e-14, 0, 2.06463, 4.11084, 1.53844, 2.61479)
metadata/_edit_group_ = true

[node name="House2" parent="Environment/Buildings" instance=ExtResource("2_le1v4")]
transform = Transform3D(0.255515, 0, -29.999, 0, 30, 0, 29.999, 0, 0.255515, -31.7253, 0.130899, -1.11181)

[node name="CollisionBuilding" type="CSGCombiner3D" parent="Environment/Buildings/House2"]
transform = Transform3D(0.000275086, 0, -0.00993562, 0, 0.043521, 0, 0.0329726, 0, 8.28917e-05, -0.174336, -0.0470055, -0.0569959)
visible = false
use_collision = true

[node name="Front_wall2" type="CSGBox3D" parent="Environment/Buildings/House2/CollisionBuilding"]
transform = Transform3D(1.00002, -0.00484559, 0.000630333, 0.00484554, 1.00002, 7.9579e-05, -0.000630711, -7.65263e-05, 1.00003, 1.58862, 4.64653, -23.9674)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="Front_wall" type="CSGBox3D" parent="Environment/Buildings/House2/CollisionBuilding"]
transform = Transform3D(1.00001, -0.00242276, 0.00031521, 0.00242275, 1.00001, 3.94071e-05, -0.000315305, -3.86446e-05, 1.00001, 1.69758, 4.7205, 0.988882)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Environment/Buildings/House2/CollisionBuilding/Front_wall"]
transform = Transform3D(0.989359, 1.45519e-10, 9.53332e-09, -4.47655e-09, -0.00580184, -4.77733, 2.03727e-10, 1.00428, -0.0275992, -0.00774574, -5.12693, -0.164842)
operation = 2
radius = 1.3252
height = 1.07959
sides = 50

[node name="Left_wall" type="CSGBox3D" parent="Environment/Buildings/House2/CollisionBuilding"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, -5.59021, 4.55233, -11.469)
size = Vector3(0.25, 10, 25)

[node name="Right_wall" type="CSGBox3D" parent="Environment/Buildings/House2/CollisionBuilding"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, 9.31371, 4.49875, -11.4309)
size = Vector3(0.25, 10, 25)

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Buildings/House2/CollisionBuilding"]
transform = Transform3D(4.80105, 0, 1.66533e-15, 0, 7.38084, 0, -2.84217e-14, 0, 2.06463, 4.11084, 1.53844, 2.61479)
metadata/_edit_group_ = true

[node name="House3 - Blue" parent="Environment/Buildings" instance=ExtResource("3_876vf")]
transform = Transform3D(-49.9714, 0, 1.69178, 0, 50, 0, -1.69178, 0, -49.9714, -28.0121, -0.60102, -27.0926)

[node name="Wall Right" type="CSGBox3D" parent="Environment/Buildings/House3 - Blue"]
transform = Transform3D(0.194578, 0, -1.11759e-08, 0, 0.532702, 0, 1.39698e-09, 0, 0.547067, -0.168623, 0.124441, 0.0312948)
visible = false
use_collision = true
size = Vector3(0.0316162, 0.391541, 0.491405)

[node name="wall Back" type="CSGBox3D" parent="Environment/Buildings/House3 - Blue"]
transform = Transform3D(0.99687, 0, -1.42609e-09, 0, 0.999999, 0, 3.72529e-09, 0, 0.00838266, 0.00109667, 0.120446, 0.167719)
visible = false
use_collision = true
size = Vector3(0.331, 0.205192, 0.027)

[node name="Wall Front" type="CSGBox3D" parent="Environment/Buildings/House3 - Blue"]
transform = Transform3D(0.998956, 0, -1.39698e-09, 0, 1, 0, 3.72529e-09, 0, 0.203139, -0.00132984, 0.124793, -0.10287)
visible = false
use_collision = true
size = Vector3(0.331, 0.204863, 0.027)

[node name="Door" type="CSGBox3D" parent="Environment/Buildings/House3 - Blue/Wall Front"]
transform = Transform3D(0.999996, 0, 3.25963e-09, 0, 0.999997, 0, -1.3411e-07, 0, 0.999999, -0.0997845, -0.0704267, -0.00316334)
visible = false
operation = 2
size = Vector3(0.05, 0.0782227, 0.05)

[node name="Wall Left" type="CSGBox3D" parent="Environment/Buildings/House3 - Blue"]
transform = Transform3D(0.44111, 0, -5.58794e-09, 0, 0.729864, 0, 9.31323e-10, 0, 0.73964, 0.159776, 0.114531, 0.0305324)
visible = false
size = Vector3(0.0316162, 0.317261, 0.359177)

[node name="House4 - Blue" parent="Environment/Buildings" instance=ExtResource("3_876vf")]
transform = Transform3D(0.592534, 0, 49.9965, 0, 49.9999, 0, -49.9965, 0, 0.592534, -12.3437, -6.96271, -45.2274)

[node name="House5" parent="Environment/Buildings" instance=ExtResource("2_le1v4")]
transform = Transform3D(-29.9174, 0, 2.22639, 0, 30, 0, -2.22639, 0, -29.9174, 18.3432, 0.130899, -45.3497)

[node name="CollisionBuilding" type="CSGCombiner3D" parent="Environment/Buildings/House5"]
transform = Transform3D(0.000275086, 0, -0.00993562, 0, 0.043521, 0, 0.0329726, 0, 8.28917e-05, -0.174336, -0.0470055, -0.0569959)
visible = false
use_collision = true

[node name="Front_wall2" type="CSGBox3D" parent="Environment/Buildings/House5/CollisionBuilding"]
transform = Transform3D(1.00002, -0.00484559, 0.000630333, 0.00484554, 1.00002, 7.9579e-05, -0.000630711, -7.65263e-05, 1.00003, 1.58862, 4.64653, -23.9674)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="Front_wall" type="CSGBox3D" parent="Environment/Buildings/House5/CollisionBuilding"]
transform = Transform3D(1.00001, -0.00242276, 0.00031521, 0.00242275, 1.00001, 3.94071e-05, -0.000315305, -3.86446e-05, 1.00001, 1.69758, 4.7205, 0.988882)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Environment/Buildings/House5/CollisionBuilding/Front_wall"]
transform = Transform3D(0.989359, 1.45519e-10, 9.53332e-09, -4.47655e-09, -0.00580184, -4.77733, 2.03727e-10, 1.00428, -0.0275992, -0.00774574, -5.12693, -0.164842)
operation = 2
radius = 1.3252
height = 1.07959
sides = 50

[node name="Left_wall" type="CSGBox3D" parent="Environment/Buildings/House5/CollisionBuilding"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, -5.59021, 4.55233, -11.469)
size = Vector3(0.25, 10, 25)

[node name="Right_wall" type="CSGBox3D" parent="Environment/Buildings/House5/CollisionBuilding"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, 9.31371, 4.49875, -11.4309)
size = Vector3(0.25, 10, 25)

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Buildings/House5/CollisionBuilding"]
transform = Transform3D(4.80105, 0, 1.66533e-15, 0, 7.38084, 0, -2.84217e-14, 0, 2.06463, 4.11084, 1.53844, 2.61479)
metadata/_edit_group_ = true

[node name="House6" parent="Environment/Buildings" instance=ExtResource("2_le1v4")]
transform = Transform3D(-1.15425, 0, -29.9779, 0, 30, 0, 29.9779, 0, -1.15425, 30.0963, 0.130899, -39.1091)

[node name="CollisionBuilding" type="CSGCombiner3D" parent="Environment/Buildings/House6"]
transform = Transform3D(0.000275086, 0, -0.00993562, 0, 0.043521, 0, 0.0329726, 0, 8.28917e-05, -0.174336, -0.0470055, -0.0569959)
visible = false
use_collision = true

[node name="Front_wall2" type="CSGBox3D" parent="Environment/Buildings/House6/CollisionBuilding"]
transform = Transform3D(1.00002, -0.00484559, 0.000630333, 0.00484554, 1.00002, 7.9579e-05, -0.000630711, -7.65263e-05, 1.00003, 1.58862, 4.64653, -23.9674)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="Front_wall" type="CSGBox3D" parent="Environment/Buildings/House6/CollisionBuilding"]
transform = Transform3D(1.00001, -0.00242276, 0.00031521, 0.00242275, 1.00001, 3.94071e-05, -0.000315305, -3.86446e-05, 1.00001, 1.69758, 4.7205, 0.988882)
use_collision = true
size = Vector3(15, 10, 0.25)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Environment/Buildings/House6/CollisionBuilding/Front_wall"]
transform = Transform3D(0.989359, 1.45519e-10, 9.53332e-09, -4.47655e-09, -0.00580184, -4.77733, 2.03727e-10, 1.00428, -0.0275992, -0.00774574, -5.12693, -0.164842)
operation = 2
radius = 1.3252
height = 1.07959
sides = 50

[node name="Left_wall" type="CSGBox3D" parent="Environment/Buildings/House6/CollisionBuilding"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, -5.59021, 4.55233, -11.469)
size = Vector3(0.25, 10, 25)

[node name="Right_wall" type="CSGBox3D" parent="Environment/Buildings/House6/CollisionBuilding"]
transform = Transform3D(1.00001, 0, 0, 0, 1.00001, 0, 0, 0, 1.00001, 9.31371, 4.49875, -11.4309)
size = Vector3(0.25, 10, 25)

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/Buildings/House6/CollisionBuilding"]
transform = Transform3D(4.80105, 0, 1.66533e-15, 0, 7.38084, 0, -2.84217e-14, 0, 2.06463, 4.11084, 1.53844, 2.61479)
metadata/_edit_group_ = true

[node name="Abandon1" parent="Environment/Buildings" instance=ExtResource("4_swwvq")]
transform = Transform3D(0.597913, 4.70683e-08, 29.994, 7.72718e-10, 30, -4.7093e-08, -29.994, 1.71115e-09, 0.597913, 5.68031, -0.775417, -43.798)

[node name="Abandon2" parent="Environment/Buildings" instance=ExtResource("4_swwvq")]
transform = Transform3D(0.597913, 4.70683e-08, 29.994, 7.72718e-10, 30, -4.7093e-08, -29.994, 1.71115e-09, 0.597913, 18.2895, -6.19309, -15.5351)

[node name="Characters" type="Node3D" parent="."]

[node name="Player" type="CharacterBody3D" parent="Characters"]
script = ExtResource("5_f4tgv")

[node name="Camera" type="Node3D" parent="."]
script = ExtResource("6_bjme1")

[node name="Camera3D" type="Camera3D" parent="Camera"]

[node name="CameraController" type="Node3D" parent="Camera"]
script = ExtResource("7_pp1vh")

[node name="CameraAnimator" type="AnimationPlayer" parent="Camera"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="FadeOverlay" type="ColorRect" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ChoiceBox" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UILayer/ChoiceBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/ChoiceBox/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueBox" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_4igs4")

[node name="Panel" type="Panel" parent="UILayer/DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="UILayer/DialogueBox"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -148.0
offset_right = 103.0
offset_bottom = -125.0
grow_vertical = 0
text = "NPC Name"

[node name="DialogueText" type="RichTextLabel" parent="UILayer/DialogueBox"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -123.0
offset_right = -32.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "This is the Dialogue"

[node name="NextButton" type="Button" parent="UILayer/DialogueBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -48.0
offset_right = -57.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
text = "Next"

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("9_t2ff0")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="AudioManager"]

[node name="SFXPlayer" type="AudioStreamPlayer3D" parent="AudioManager"]

[node name="VoicePlayer" type="AudioStreamPlayer" parent="AudioManager"]

[node name="AmbientPlayer" type="AudioStreamPlayer" parent="AudioManager"]

[node name="NarrativeController" type="Node" parent="."]
script = ExtResource("10_722yh")
