# awakening_audio.gd - Attach to AudioManager node
extends Node

@onready var music_player = $MusicPlayer
@onready var sfx_player = $SFXPlayer
@onready var voice_player = $VoicePlayer
@onready var ambient_player = $AmbientPlayer

# We'll create procedural audio since we don't have audio files
var audio_generator = AudioStreamGenerator.new()

func _ready():
	setup_awakening_audio()

func setup_awakening_audio():
	# Setup ambient sounds
	create_ambient_wind()
	create_distorted_birds()
	play_soft_humming()

func create_ambient_wind():
	# Create a simple wind sound using AudioStreamGenerator
	var wind_stream = AudioStreamGenerator.new()
	wind_stream.mix_rate = 22050
	wind_stream.buffer_length = 0.1
	
	music_player.stream = wind_stream
	music_player.volume_db = -15
	music_player.play()

func create_distorted_birds():
	# We'll simulate this with code since we don't have actual audio files
	print("Playing distorted bird sounds...")
	
	# You would load actual audio files like this:
	# var bird_sound = preload("res://audio/distorted_birds.ogg")
	# sfx_player.stream = bird_sound
	# sfx_player.play()

func play_soft_humming():
	print("Playing soft humming...")
	
	# You would load actual audio files like this:
	# var hum_sound = preload("res://audio/soft_hum.ogg")
	# ambient_player.stream = hum_sound
	# ambient_player.play()

func fade_in_from_black():
	# Audio cue for fade in
	var tween = create_tween()
	tween.tween_property(music_player, "volume_db", -5, 3.0)

func play_choice_sound():
	# Subtle sound when making a choice
	print("Choice selected sound")

func play_realization_sound():
	# Ominous sound when realizing they're alone
	print("Playing realization sound - low ominous tone")
